[package]
name = "ccscheck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hex = "0.4.3"
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde_json = "1.0.68"

[profile.dev]
opt-level = 0
overflow-checks = false
debug = true

[profile.release]
overflow-checks = true
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1